# Impromptu

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: lint-autofix.yaml
backup/: bootfs_partition_backup.7z
docs/: docs.md
src/: GCODE_generator.py  config.py  main.py  netlist_validator.py  rc_circuit.net  test_short.net
src/agents/: NetlistAgent.py  SpecAgent.py
src/backend/: .gitignore  config.py  executor.py  main.py  server.py
src/backend/agents/: BaseAgent.py  ChatAgent.py  NetlistAgent.py  SpecAgent.py
src/backend/models/: BaseModel.py  OpenAIModel.py
src/backend/orchestrator/: orchestrator.py
src/backend/utils/: check_api_key.py  helpers.py  types.py  usage.py
src/backend/workflows/: BaseWorkflow.py  CircuitToPrinterWorkflow.py  ManufacturingWorkflow.py  NetlistWorkflow.py  SpecWorkflow.py
src/frontend/: next.config.mjs
src/frontend/app/: layout.tsx  page.tsx
src/frontend/app/api/chat/: route.ts
src/frontend/app/api/execute-gcode/: route.ts
src/frontend/app/api/generate-circuit/: route.ts
src/frontend/components/: circuit-to-printer-card.tsx  manufacturing-card.tsx  pipeline-runner.tsx  pipeline-stage.tsx  scroll-indicator.tsx  settings-dialog.tsx  tutorial-overlay.tsx  typewriter-message.tsx
src/frontend/hooks/: use-typewriter.ts
src/models/: BaseModel.py
src/orchestrator/: orchestrator.py
src/utils/: usage.py
src/workflows/: NetlistWorkflow.py  SpecWorkflow.py
