[project]
name = "impromptu"
version = "0.1.0"
description = "Automatic, end-to-end circuit prototyping system for small-to-medium sized circuits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I"]
