[project]
name = "impromptu"
version = "0.1.0"
description = "Automatic, end-to-end circuit prototyping system for small-to-medium sized circuits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.4",
    "networkx>=3.4.2",
    "openai>=1.99.9",
    "pyspice>=1.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I"]
